1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>
	
	* Permutation.m ([Permutation_c +createBegin:]): Call allocIVars:
	with [self getClass] as an arguments instead of self and setClass
	to self.

	* Collection.m ([PermutedIndex_c +createBegin:]): Likewise.
	

1999-03-03  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Permutation.m ([Permutation_c -createEnd]): Use macro getCZone
	instead of getComponentZone: method.
	([Permutation_c +createBegin:]): Likewise.

	* Collection.m ([PermutedIndex_c -createEnd]): Likewise.
	([PermutedIndex_c -reshuffle]): Likewise.
	([PermutedIndex_c -createEnd]): Likewise.

1999-03-02  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Permutation.m ([Permutation_c +createBegin:]): Use component zone
	for allocating shuffler.
	([Permutation_c -mapAllocations:mapalloc]): Call 
	[super mapAllocations: mapalloc] to deallocate block of memory
	allocated by array.

1999-02-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Disable "nil" handling.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Map.m ([Map_c -lispIn:]): Support string keys (copying them from
	expression).

	* InputStream.m ([InputStream_c -getExpr]): Use readString
	instead of getExpr for keyword name.

1999-02-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m, Map.m ([... hdf5OutShallow:]): Call writeLevels
	in addition to writeRowNames.
	
1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Raise an event
	instead of aborting.  Treat :keyword like #:keyword.

	* ListShuffler.m: Use raiseEvent() instead of raiseEvent:.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m ([Map_c -_lispOut_:deep:]): Don't print #:compare-function
	when none set.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
