@@ -1,3 +1,9 @@
+1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Permutation.m ([Permutation_c +createBegin:]): Revert last change.
+
+	* Collection.m ([PermutedIndex_c +createBegin:]): Likewise.
+
 1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>
 	
 	* Permutation.m ([Permutation_c +createBegin:]): Call allocIVars:
@@ -5,7 +11,6 @@
 	to self.
 
 	* Collection.m ([PermutedIndex_c +createBegin:]): Likewise.
-	
 
 1999-03-03  Vladimir Jojic  <vjojic@chama.santafe.edu>
 
